Dongju added some code to fix z-index issues

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6578,7 +6578,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 15;
+    z-index: 1;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
